Added disclaimer for A3

--- a/A3/torchgeo_comparison.ipynb
+++ b/A3/torchgeo_comparison.ipynb
@@ -12,7 +12,10 @@
         "- Compare two different pre-trained models side-by-side\n",
         "- Visualize results with detailed performance metrics\n",
         "\n",
-        "Built with [TorchGeo](https://github.com/microsoft/torchgeo), to get pre-trained models for satellite imagery."
+        "Built with [TorchGeo](https://github.com/microsoft/torchgeo), to get pre-trained models for satellite imagery.\n",
+        "\n",
+        "### Disclaimer\n",
+        "This notebook is a work in progress. The code is a starting point for your own experiments and may require modifications to work with your specific dataset."
       ]
     },
     {
