Added module docstring

--- a/A4/a4.ipynb
+++ b/A4/a4.ipynb
@@ -62,8 +62,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "af88cda5",
+   "metadata": {},
+   "source": [
+    "## Define model requirements\n",
+    "Example model configuration for Sentinel-2A data, this configuration is based on common practices for pre-trained models\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c1b63a02",
    "metadata": {},
    "outputs": [
@@ -77,9 +86,6 @@
     }
    ],
    "source": [
-    "# Define model requirements\n",
-    "# Example model configuration for Sentinel-2A data\n",
-    "# This configuration is based on common practices for pre-trained models\n",
     "\n",
     "SENTINEL2_MODELS_CONFIG = {\n",
     "    # ResNet-based models for RGB images classification\n",
